[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/godotWad/scenes/player/player.gd" type="Script" id=1]
[ext_resource path="res://addons/godotWad/src/interactionSector.gd" type="Script" id=2]
[ext_resource path="res://addons/godotWad/scenes/player/Crosshair.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godotWad/scenes/player/debug/CanvasLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godotWad/scenes/player/gunManger.gd" type="Script" id=5]
[ext_resource path="res://addons/godotWad/scenes/guns/instances/shotgun.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/godotWad/scenes/guns/instances/pistol.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/godotWad/scenes/guns/instances/chaingun.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/godotWad/scenes/player/Step-Upper.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/godotWad/scenes/guns/instances/rocketLauncher.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/godotWad/scenes/guns/instances/fists.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/godotWad/scenes/guns/instances/chainsaw.tscn" type="PackedScene" id=13]

[sub_resource type="CylinderShape" id=31]
height = 2.099
radius = 0.5

[sub_resource type="CylinderMesh" id=8]
top_radius = 0.5
bottom_radius = 0.5
height = 2.099

[sub_resource type="SpatialMaterial" id=32]
flags_transparent = true
albedo_color = Color( 1, 0, 0, 0.415686 )

[node name="KinematicBody" type="KinematicBody" groups=["hlTrigger", "player"]]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
script = ExtResource( 1 )
__meta__ = {
"height": 2.1
}
mouseSensitivity = 0.06
gravity = 100
maxSpeed = 2000
friction = 9
height = 2.099

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05, 0 )
current = true
far = 8192.0

[node name="CanvasLayer" parent="Camera" instance=ExtResource( 4 )]

[node name="UI" type="Control" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" parent="Camera/UI" instance=ExtResource( 3 )]

[node name="gunManager" type="Spatial" parent="Camera"]
script = ExtResource( 5 )

[node name="shootCast" type="RayCast" parent="Camera/gunManager"]
visible = false
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="pistol" parent="Camera/gunManager" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164, -0.298 )

[node name="chaingun" parent="Camera/gunManager" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164, -0.298 )
shootDurationMS = 150

[node name="shotgun" parent="Camera/gunManager" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164, -0.298 )

[node name="rocketLauncher" parent="Camera/gunManager" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164, -0.298 )

[node name="fists" parent="Camera/gunManager" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.19, -0.298 )

[node name="chainsaw" parent="Camera/gunManager" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.19, -0.298 )

[node name="ItemList" type="ItemList" parent="Camera"]
visible = false
anchor_left = 0.305
anchor_top = 0.288
anchor_right = 0.691
anchor_bottom = 0.76
margin_left = -0.320007
margin_top = 0.199997
margin_right = 0.415955
margin_bottom = -18.0
max_columns = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0495, 0 )
shape = SubResource( 31 )

[node name="footCast" type="RayCast" parent="." groups=["hlTrigger", "player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )
debug_shape_custom_color = Color( 0.227451, 0.117647, 0.117647, 1 )

[node name="footstepSound" type="AudioStreamPlayer3D" parent="."]
unit_db = 10.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00187574, 1.0495, 0.000322774 )
mesh = SubResource( 8 )
material/0 = SubResource( 32 )

[node name="Step-Upper" parent="." instance=ExtResource( 9 )]
height = 1.3

[node name="TextureRect" type="TextureRect" parent="." groups=["fullscreenTexture"]]
anchor_right = 1.0
anchor_bottom = 1.0
